# ProductivityManager

./: README.md  eye_track.py  find_phone.py  main.py  pyproject.toml
matplotlib-ok8oepjn/: fontlist-v330.json
templates/: camera.html  index.html  summary.html
