[tool.poetry]
name = "multi-page-flask-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-socketio = "^5.0.1"
imutils = "^0.5.4"
opencv-python = "^4.5.1"
keras = "^2.4.3"
boto3 = "^1.17.49"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
